--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,31 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+:root {
+  font-family: 'Montserrat', sans-serif;
+  line-height: 2;
+  background-color: getColor('background-white');
+  color: getColor('black');
+  font-size: 16px;
+}
+* {
+  margin: 0px;
+}
+ul,
+ol {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  margin-block-end: 0;
+  margin-block-start: 0;
+}
+
+p {
+  margin-block-end: 0;
+  margin-block-start: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
