mobile version_part1
header, hero, advantages, problems, how we do, program, benefits, about, guarantee

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,21 +1,20 @@
-<section>
-  <h2>Ours advantages</h2>
-  <div>
-    <ul>
-      <li>
-        <img src="./images/logo.png" alt="ikonka1" width="20px" height="auto" />
-        <span>Adapted author's UPE program</span>
-      </li>
-
-      <li>
-        <img src="./images/logo.png" alt="ikonka2" width="20px" height="auto" />
-        <span>Modern teaching methods</span>
-      </li>
-
-      <li>
-        <img src="./images/logo.png" alt="ikonka3" width="20px" height="auto" />
-        <span>Financial guarantee the result</span>
-      </li>
-    </ul>
+<section class="section">
+  <div class="container">
+    <div>
+      <h2 class="advantages__title">Ours advantages</h2>
+      <ul class="advantages__list">
+        <li class="advantages__item">
+          <p class="advantages__text">Adapted author's UPE program</p>
+        </li>
+        <li class="advantages__item">
+          <p class="advantages__text--teaching">Modern teaching methods</p>
+        </li>
+        <li class="advantages__item">
+          <p class="advantages__text--guarantee">
+            Financial guarantee the result
+          </p>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
