--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,11 +1,21 @@
-<section>
-  <h2>Why do people choose us</h2>
-  <ol>
-    <li>Training in small groups</li>
-    <li>Rendered notes</li>
-    <li>Each lesson has a goal and a specific result</li>
-    <li>The real results of the teacher</li>
-    <li>The course program meets the requirements of the MES of Ukraine</li>
-    <li>Set of groups by level of knowledge</li>
-  </ol>
+<section class="section">
+  <div class="problems__background">
+    <div class="container">
+      <h2 class="problems__title--benefits">Why do people choose us</h2>
+      <div class="list__background">
+        <ol class="problems__list">
+          <li class="problems__item">Training in small groups</li>
+          <li class="problems__item">Rendered notes</li>
+          <li class="problems__item">
+            Each lesson has a goal and a specific result
+          </li>
+          <li class="problems__item">The real results of the teacher</li>
+          <li class="problems__item">
+            The course program meets the requirements of the MES of Ukraine
+          </li>
+          <li class="problems__item">Set of groups by level of knowledge</li>
+        </ol>
+      </div>
+    </div>
+  </div>
 </section>
