--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,30 @@
 <header>
-  <div>Logo</div>
-  <nav>
-    <button type="menu">hamburger</button>
-  </nav>
+  <div class="container">
+    <div class="section">
+      <div class="header">
+        <a class="header__logo" href="./index.html">
+          <img
+            class="logo__img"
+            alt="logo-return to main page"
+            src="./images/logo_mobile.jpg"
+            srcset="./images/logo_2x_mobile.jpg"
+          />
+        </a>
+        <nav class="header__navigation">
+          <ul>
+            <li>Studying program</li>
+            <li>About</li>
+            <li>Training options</li>
+            <li>Contacts</li>
+            <li>Consultation by phone</li>
+          </ul>
+        </nav>
+        <a class="header__smallmenu" href="#">
+          <svg class="smallmenu">
+            <use href="./images/icons/icons.svg#icon-burger"></use>
+          </svg>
+        </a>
+      </div>
+    </div>
+  </div>
 </header>
