--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,12 +1,22 @@
-<section>
-  <div>
-    <h1>Complex preparation for English UPE</h1>
-    <div>
-      <p>It won't be easy</p>
-      <p>But you're guaranteed to get</p>
-      <p>+25 points</p>
+<section class="section">
+  <div class="hero__wave">
+    <div class="container">
+      <div class="hero">
+        <h1 class="hero__title">Complex preparation for English UPE</h1>
+        <div class="hero__warnings">
+          <p class="hero__warnings--gray">It won't be easy.</p>
+          <p>But you're guaranteed to get</p>
+          <p class="hero__warnings--orange">+25 points</p>
+        </div>
+        <a href="#" class="hero__button">I want a free lesson</a>
+        <div class="hero__image">
+          <img
+            class="image__main"
+            src="./images/hero_mobile.png"
+            alt="our teacher with students"
+          />
+        </div>
+      </div>
     </div>
-    <button type="button">I want a free lesson</button>
-    <div>image</div>
   </div>
 </section>
