--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,58 +1,53 @@
-<section>
-  <ul>
-    <li>
-      <h4>1 SEMESTER</h4>
-      <h5>Grammar</h5>
-      <p>Nouns & Articles</p>
-      <p>Adjectives & Adverb</p>
-      <h5>Vocabulary</h5>
-      <p>Family & Relations</p>
-      <p>People & Society</p>
-    </li>
-    <li>
-      <h4>2 SEMESTER</h4>
-      <h5>Grammar</h5>
-      <p>Pronouns</p>
-      <p>Active Voice</p>
-      <p>Passive Voice</p>
-      <h5>Vocabulary</h5>
-      <p>Home</p>
-      <p>School</p>
-      <p>Work</p>
-    </li>
-    <li>
-      <h4>3 SEMESTER</h4>
-      <h5>Grammar</h5>
-      <p>Modal verbs</p>
-      <p>Infinitive</p>
-      <p>Gerund</p>
-      <p>Participle: 1, 2</p>
-      <h5>Vocabulary</h5>
-      <p>Travel & Tourism</p>
-      <p>Culture & Free Time</p>
-      <p>Sport</p>
-      <h5>Writing</h5>
-      <p>Informal Letter</p>
-    </li>
-    <li>
-      <h4>4 SEMESTER</h4>
-      <h5>Grammar</h5>
-      <p>Clauses: Conditional and Wishes</p>
-      <p>Direct / Reported speech</p>
-      <p>Preposition</p>
-      <p>Conjunction</p>
-      <p>Numeral</p>
-      <h5>Vocabulary</h5>
-      <p>Healthy living</p>
-      <p>Nature & Enviroment</p>
-      <p>Money</p>
-      <h5>Writing</h5>
-      <p>Formal letter</p>
-    </li>
-    <li>
-      <h4>5 SEMESTER</h4>
-      <h5>Nothing</h5>
-      <p>Revision Tests</p>
-    </li>
-  </ul>
+<section class="section--program">
+  <div class="program__background">
+    <div class="container">
+      <div class="program">
+        <h2 class="program__title">Our program</h2>
+        <ul class="program__list">
+          <li class="program__item">
+            <h4 class="program__item__semester">1 SEMESTER</h4>
+            <h5 class="program__item__resource">Grammar</h5>
+            <p class="program__item__details">
+              Nouns & Articles </br> Adjectives & Adverb
+            </p>            
+            <h5 class="program__item__resource">Vocabulary</h5>
+            <p class="program__item__details">Family & Relations </br> People & Society</p>            
+          </li>
+          <li class="program__item">
+            <h4 class="program__item__semester">2 SEMESTER</h4>
+            <h5 class="program__item__resource">Grammar</h5>
+            <p class="program__item__details">Pronouns </br> Active Voice </br> Passive Voice</p>            
+            <h5 class="program__item__resource">Vocabulary</h5>
+            <p class="program__item__details">Home </br> School </br> Work </br></p>            
+          </li>
+          <li class="program__item">
+            <h4 class="program__item__semester">3 SEMESTER</h4>
+            <h5 class="program__item__resource">Grammar</h5>
+            <p class="program__item__details">Modal verbs </br> Infinitive </br> Gerund </br> Participle: 1, 2</p>            
+            <h5 class="program__item__resource">Vocabulary</h5>
+            <p class="program__item__details">Travel & Tourism </br> Culture & Free Time </br> Sport</p>            
+            <h5 class="program__item__resource">Writing</h5>
+            <p class="program__item__details">Informal Letter</p>
+          </li>
+          <li class="program__item">
+            <h4 class="program__item__semester">4 SEMESTER</h4>
+            <h5 class="program__item__resource">Grammar</h5>
+            <p class="program__item__details">
+              Clauses: Conditional and Wishes </br>Direct / Reported speech </br>Preposition </br> Conjunction</br>Numeral
+            </p>            
+            <h5 class="program__item__resource">Vocabulary</h5>
+            <p class="program__item__details">Healthy living </br>Nature & Enviroment </br>Money</p>            
+            <h5 class="program__item__resource">Writing</h5>
+            <p class="program__item__details">Formal letter</p>
+          </li>
+          <li class="program__item">
+            <h4 class="program__item__semester">5 SEMESTER</h4>
+            <h5 class="program__item__resource"></h5>
+            <p class="program__item__details--image">Revision Tests</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </section>
+
