--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -15,6 +15,7 @@ $colors: (
   'black': #111518,
   'background-white': #ffffff,
   'primary-gray': #b9b9b9,
+  'guarantee-gray': #f1f1f1,
 );
 
 @function getColor($key) {
