--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,12 @@
 @import './variables';
 @import './common';
+@import './header';
+@import './hero';
+@import './advantages';
+@import './problems';
+@import './howWeDo';
+@import './program';
+@import './benefits';
+@import './about';
+@import './guarantee';
+@import './reviews';
