--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,33 +1,42 @@
-<section>
-  <h2>Teacher</h2>
-  <div>
-    <img
-      src="./images/logo.png"
-      alt="Elena Moreva"
-      width="150px"
-      height="auto"
-    />
+<section class="section">
+  <div class="container">
+    <div class="about">
+      <h2 class="about__title">Teacher</h2>
+      <div class="about__thumb">
+        <img
+          class="about__img"
+          src="./images/elena_mobile.png"
+          alt="Elena Moreva"
+        />
+      </div>
+      <h2 class="about__title--underlined">Elena Moreva</h2>
+      <ul class="about__list">
+        <li class="about__item">
+          6 years of experience in preparing students for UPE
+        </li>
+        <li class="about__item">
+          Own result of passing VNO - 197 points 2 years in a row
+        </li>
+        <li class="about__item">
+          Passed excellent at the international analogue of UPE - Cambridge PET
+          (Preliminary English Test)
+        </li>
+      </ul>
+      <p class="about__article__text">
+        Graduated from the Institute of International Relations of the NAU with
+        a degree in translator-analyst.In spare time takes courses from the best
+        universities in the world on effective teaching and essay writing
+        techniques.Completed: English Grammar and Essay Writing (Berkeley),
+        English Grammar & Style (The University of Queesland), How to Write an
+        Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of
+        Teaching (GEMS education), Powerful Tools for Teaching and Learning
+        (University of Houston).
+      </p>
+      <a
+        class="about__link"
+        href="https://www.cambridgeenglish.org/exams-and-tests/preliminary/"
+        >Cambridge English Entry Level Certificate</a
+      >
+    </div>
   </div>
-  <h2>Elena Moreva</h2>
-  <ul>
-    <li>6 years of experience in preparing students for UPE</li>
-    <li>Own result of passing VNO - 197 points 2 years in a row</li>
-    <li>
-      Passed excellent at the international analogue of UPE - Cambridge PET
-      (Preliminary English Test)
-    </li>
-    <p>
-      Graduated from the Institute of International Relations of the NAU with a
-      degree in translator-analyst.In spare time takes courses from the best
-      universities in the world on effective teaching and essay writing
-      techniques.Completed: English Grammar and Essay Writing (Berkeley),
-      English Grammar & Style (The University of Queesland), How to Write an
-      Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of
-      Teaching (GEMS education), Powerful Tools for Teaching and Learning
-      (University of Houston).
-    </p>
-    <a href="https://www.cambridgeenglish.org/exams-and-tests/preliminary/"
-      >Cambridge English Entry Level Certificate</a
-    >
-  </ul>
 </section>
