--- a/src/partials/guarantee.html
+++ b/src/partials/guarantee.html
@@ -1,23 +1,29 @@
-<section>
-  <h2>We guarantee</h2>
-  <div>
-    <ul>
-      <li>
-        You will pass the UPE with at least 25 points better than on the first
-        practice test. Otherwise, we will refund your money.<span>*</span>
-      </li>
-      <li>
-        You will learn to write essays with at least 10 points out of 14.
-        <span>While 20% of the students received 0 for essays.</span>
-      </li>
-      <li>
-        You will study in your area. We will choose the location for the classes
-        after the teams have been formed.
-      </li>
-      <li>
-        Teams will be formed based on the starting level of the students. We
-        take into account the characteristics of each student.
-      </li>
-    </ul>
+<section class="secion">
+  <div class="container">
+    <div class="guarantee">
+      <h2 class="guarantee__title">We guarantee</h2>
+      <div class="guarantee__background">
+        <ul class="guarantee__list">
+          <li class="guarantee__item">
+            You will pass the UPE with at least 25 points better than on the
+            first practice test. Otherwise, we will refund your money.<span
+              >*</span
+            >
+          </li>
+          <li class="guarantee__item">
+            You will learn to write essays with at least 10 points out of 14.
+            <span>While 20% of the students received 0 for essays.</span>
+          </li>
+          <li class="guarantee__item">
+            You will study in your area. We will choose the location for the
+            classes after the teams have been formed.
+          </li>
+          <li class="guarantee__item">
+            Teams will be formed based on the starting level of the students. We
+            take into account the characteristics of each student.
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </section>
