--- a/src/partials/howWeDo.html
+++ b/src/partials/howWeDo.html
@@ -1,47 +1,69 @@
-<section>
-  <h2>How do we do it</h2>
-  <ul>
-    <li>
-      <h3>Adapted program preparation for UPE</h3>
-      <p>
-        You will learn grammar and vocabulary at the same time. And you will
-        learn how to write essays.
-      </p>
-    </li>
-    <li>
-      <h3>Classroom and online learning</h3>
-      <p>
-        The teacher will help not only in the classroom, but also during home
-        preparation. Parents can chat if they wish.
-      </p>
-    </li>
-    <li>
-      <h3>The habit of reading in English</h3>
-      <p>
-        Articles from sources that are used in the development of this UPE will
-        be received by phone twice a week.
-      </p>
-    </li>
-    <li>
-      <h3>Psychological support</h3>
-      <p>
-        We will teach you testing techniques, the ability to plan your
-        confidence training in itself.
-      </p>
-    </li>
-    <li>
-      <h3>Training on copyright manuals</h3>
-      <p>
-        You don't have to waste your time on a search for material and to buy
-        anything extra. We have compiled 2 manuals for you.
-      </p>
-    </li>
-    <li>
-      <h3>Ability to comprehend spoken English</h3>
-      <p>
-        "F.R.I.E.N.D.S" won't help you. You will listen regularly and analyze
-        audio recordings in accordance with the studied vocabulary.
-      </p>
-    </li>
-  </ul>
+<section class="section">
+  <div class="container">
+    <div class="how">
+      <h2 class="how__title">How do we do it</h2>
+      <ul class="how__list">
+        <li class="how__item">
+          <svg class="how__item__icon">
+            <use href="./images/icons/icons.svg#icon-study program"></use>
+          </svg>
+          <h3 class="how__item__title">Adapted program preparation for UPE</h3>
+          <p class="how__item__text">
+            You will learn grammar and vocabulary at the same time. And you will
+            learn how to write essays.
+          </p>
+        </li>
+        <li class="how__item">
+          <svg class="how__item__icon">
+            <use href="./images/icons/icons.svg#icon-mobile teaching"></use>
+          </svg>
+          <h3 class="how__item__title">Classroom and online learning</h3>
+          <p class="how__item__text">
+            The teacher will help not only in the classroom, but also during
+            home preparation. Parents can chat if they wish.
+          </p>
+        </li>
+        <li class="how__item">
+          <svg class="how__item__icon">
+            <use href="./images/icons/icons.svg#icon-open book"></use>
+          </svg>
+          <h3 class="how__item__title">The habit of reading in English</h3>
+          <p class="how__item__text">
+            Articles from sources that are used in the development of this UPE
+            will be received by phone twice a week.
+          </p>
+        </li>
+        <li class="how__item">
+          <svg class="how__item__icon">
+            <use href="./images/icons/icons.svg#icon-group"></use>
+          </svg>
+          <h3 class="how__item__title">Psychological support</h3>
+          <p class="how__item__text">
+            We will teach you testing techniques, the ability to plan your
+            confidence training in itself.
+          </p>
+        </li>
+        <li class="how__item">
+          <svg class="how__item__icon">
+            <use href="./images/icons/icons.svg#icon-female student"></use>
+          </svg>
+          <h3 class="how__item__title">Training on copyright manuals</h3>
+          <p class="how__item__text">
+            You don't have to waste your time on a search for material and to
+            buy anything extra. We have compiled 2 manuals for you.
+          </p>
+        </li>
+        <li class="how__item">
+          <svg class="how__item__icon">
+            <use href="./images/icons/icons.svg#icon-audiobook"></use>
+          </svg>
+          <h3 class="how__item__title">Ability to comprehend spoken English</h3>
+          <p class="how__item__text">
+            "F.R.I.E.N.D.S" won't help you. You will listen regularly and
+            analyze audio recordings in accordance with the studied vocabulary.
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
 </section>
