--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,14 +1,20 @@
-<section>
-  <h2>
-    The main problems of students in English UPE, which we <span>help</span> to
-    solve
-  </h2>
-  <ol>
-    <li>Grammar</li>
-    <li>Inability to understand spoken English</li>
-    <li>Stingy vocabulary for writing an essay</li>
-    <li>Preparing alone</li>
-    <li>Lack of a single knowledge resource</li>
-    <li>Lack of self-organization and laziness</li>
-  </ol>
+<section class="section">
+  <div class="problems__background">
+    <div class="container">
+      <h2 class="problems__title">
+        The main problems of students in English UPE, which we
+        <span class="problems__title--accent"> help </span> to solve
+      </h2>
+      <div class="list__background">
+        <ol class="problems__list">
+          <li class="problems__item">Grammar</li>
+          <li class="problems__item">Inability to understand spoken English</li>
+          <li class="problems__item">Stingy vocabulary for writing an essay</li>
+          <li class="problems__item">Preparing alone</li>
+          <li class="problems__item">Lack of a single knowledge resource</li>
+          <li class="problems__item">Lack of self-organization and laziness</li>
+        </ol>
+      </div>
+    </div>
+  </div>
 </section>
