--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,27 +1,29 @@
-<section>
-  <h2>Feedback from graduates</h2>
-  <div>
-    <img
-      src="./images/logo.png"
-      alt="picture of reviewer"
-      width="100px"
-      height="auto"
-    />
-  </div>
-  <div>
-    <p>Tonya Kucherovskaya</p>
-    <p>
-      Graduated from 2015, National University of Bioresources and natural
-      history of Ukraine
-    </p>
-    <p>
-      In a short time with Elena, I mastered grammmar and replenished my
-      completely empty vocabulary. From the first lesson I realized that I was
-      on my plate. Elena and I became friends because she was really worried
-      about my success. She became an authority for me, but I did not tremble in
-      class, fearing to make the slightest mistake. Now I can brag that I'm
-      student... <a>Read more</a>
-    </p>
-    <div>carousel</div>
+<section class="section">
+  <div class="container">
+    <h2>Feedback from graduates</h2>
+    <div>
+      <img
+        src="./images/logo.png"
+        alt="picture of reviewer"
+        width="100px"
+        height="auto"
+      />
+    </div>
+    <div>
+      <p>Tonya Kucherovskaya</p>
+      <p>
+        Graduated from 2015, National University of Bioresources and natural
+        history of Ukraine
+      </p>
+      <article>
+        In a short time with Elena, I mastered grammmar and replenished my
+        completely empty vocabulary. From the first lesson I realized that I was
+        on my plate. Elena and I became friends because she was really worried
+        about my success. She became an authority for me, but I did not tremble
+        in class, fearing to make the slightest mistake. Now I can brag that I'm
+        student... <a>Read more</a>
+      </article>
+      <div>carousel</div>
+    </div>
   </div>
 </section>
