--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,13 +1,30 @@
-<section>
-  <h2>Contact</h2>
-  <div>
-    <img src="./images/logo.png" alt="logo" width="80px" height="auto" />
-  </div>
-  <address>+38 (000) 000 00 00</address>
-  <div>
-    <a href="">Logo Instagram</a>
-  </div>
-  <div>
-    <span>All rights reserved, 2019</span>
+<section class="section">
+  <div class="container">
+    <footer class="footer">
+      <h2 class="footer__title">Contact us</h2>
+      <div class="footer__logo">
+        <img
+          src="./images/logo_mobile.jpg"
+          alt="logo"
+          width="80px"
+          height="auto"
+        />
+      </div>
+      <address class="address">
+        <a class="address__phone" href="tel:+38 (000) 000 00 00"
+          >+38 (000) 000 00 00</a
+        >
+        <a
+          class="address__social"
+          href="https://www.instagram.com/"
+          target="_blank"
+          rel="noreferrer noopener"
+          ><div class="social__logo"></div>
+        </a>
+      </address>
+      <div class="footer__background">
+        <span class="footer__copyright"> &#169 All rights reserved, 2019</span>
+      </div>
+    </footer>
   </div>
 </section>
