--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,27 +1,31 @@
 <section class="section">
   <div class="container">
-    <h2>Feedback from graduates</h2>
-    <div>
-      <img
-        src="./images/logo.png"
-        alt="picture of reviewer"
-        width="100px"
-        height="auto"
-      />
-    </div>
-    <div>
-      <p>Tonya Kucherovskaya</p>
-      <p>
+    <div class="reviews">
+      <h2 class="reviews__title">Feedback from graduates</h2>
+      <div class="reviews__thumb">
+        <img
+          class="reviews__image"
+          src="./images/logo.png"
+          alt="picture of reviewer"
+          width="100px"
+          height="auto"
+        />
+      </div>
+      <svg class="vk">
+        <use href="./images/icons/icons.svg#icon-vk"></use>
+      </svg>
+      <p class="reviews__name">Tonya Kucherovskaya</p>
+      <p class="reviews__description">
         Graduated from 2015, National University of Bioresources and natural
         history of Ukraine
       </p>
-      <article>
+      <article class="reviews__review">
         In a short time with Elena, I mastered grammmar and replenished my
         completely empty vocabulary. From the first lesson I realized that I was
         on my plate. Elena and I became friends because she was really worried
         about my success. She became an authority for me, but I did not tremble
         in class, fearing to make the slightest mistake. Now I can brag that I'm
-        student... <a>Read more</a>
+        student... <a class="review__more" href="#">Read more</a>
       </article>
       <div>carousel</div>
     </div>
