add mobile navigation

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,6 @@
 <section class="section">
   <div class="container">
-    <div>
+    <div class="advantages">
       <h2 class="advantages__title">Ours advantages</h2>
       <ul class="advantages__list">
         <li class="advantages__item">
