--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,19 +1,23 @@
 <section class="section">
-  <div class="problems__background">
+  <div class="problems__background--benefits">
     <div class="container">
       <h2 class="problems__title--benefits">Why do people choose us</h2>
-      <div class="list__background">
+      <div class="list__background--benefits">
         <ol class="problems__list">
-          <li class="problems__item">Training in small groups</li>
-          <li class="problems__item">Rendered notes</li>
-          <li class="problems__item">
+          <li class="problems__item--benefits">Training in small groups</li>
+          <li class="problems__item--benefits">Rendered notes</li>
+          <li class="problems__item--benefits">
             Each lesson has a goal and a specific result
           </li>
-          <li class="problems__item">The real results of the teacher</li>
-          <li class="problems__item">
+          <li class="problems__item--benefits">
+            The real results of the teacher
+          </li>
+          <li class="problems__item--benefits">
             The course program meets the requirements of the MES of Ukraine
           </li>
-          <li class="problems__item">Set of groups by level of knowledge</li>
+          <li class="problems__item--benefits">
+            Set of groups by level of knowledge
+          </li>
         </ol>
       </div>
     </div>
