--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section--footer">
   <div class="container">
     <footer class="footer">
       <h2 class="footer__title">Contact us</h2>
@@ -11,7 +11,7 @@
         />
       </div>
       <address class="address">
-        <a class="address__phone" href="tel:+38 (000) 000 00 00"
+        <a id="phone" class="address__phone" href="tel:+38 (000) 000 00 00"
           >+38 (000) 000 00 00</a
         >
         <a
