--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,7 +8,7 @@
           <p>But you're guaranteed to get</p>
           <p class="hero__warnings--orange">+25 points</p>
         </div>
-        <a href="#contact" class="hero__button">I want a free lesson</a>
+        <a href="#contacts" class="hero__button">I want a free lesson</a>
         <div class="hero__image">
           <img
             class="image__main"
