--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,4 +1,4 @@
-<section class="section--program">
+<section id="program" class="section--program">
   <div class="program__background">
     <div class="container">
       <div class="program">
