--- a/src/sass/_problems.scss
+++ b/src/sass/_problems.scss
@@ -10,7 +10,7 @@
   color: getColor('background-white');
   font-size: 1.5em;
   font-weight: getFontWeight('font-extrabold');
-  letter-spacing: 0.05em;
+  letter-spacing: 0.04em;
   &--accent {
     @extend .problems__title;
     color: getColor('brand-color');
@@ -18,11 +18,11 @@
   }
 }
 .list__background {
-  background-color: getColor('background-white');
   margin-top: 1.875em;
-  padding: 1.25em 1.875em;
+  padding: 1.25em 1.875em 0;
   display: flex;
   justify-content: center;
+  background-color: getColor('background-white');
 }
 .problems__list {
   display: flex;
@@ -31,7 +31,6 @@
   list-style-type: none;
 }
 .problems__item {
-  margin-bottom: 0.625em;
   font-size: 0.875em;
   font-weight: getFontWeight('font-bold');
   word-wrap: break-word;
@@ -44,4 +43,7 @@
     font-size: 0.875em;
     color: getColor('brand-color');
   }
+}
+.problems__item:not(:last-child) {
+  margin-bottom: 0.75em;
 }
