--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section id="about" class="section">
   <div class="container">
     <div class="about">
       <h2 class="about__title">Teacher</h2>
@@ -24,13 +24,13 @@
       </ul>
       <p class="about__article__text">
         Graduated from the Institute of International Relations of the NAU with
-        a degree in translator-analyst.In spare time takes courses from the best
-        universities in the world on effective teaching and essay writing
-        techniques.Completed: English Grammar and Essay Writing (Berkeley),
-        English Grammar & Style (The University of Queesland), How to Write an
-        Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of
-        Teaching (GEMS education), Powerful Tools for Teaching and Learning
-        (University of Houston).
+        a degree in translator-analyst. <br />In spare time takes courses from
+        the best universities in the world on effective teaching and essay
+        writing techniques. Completed: English Grammar and Essay Writing
+        (Berkeley), English Grammar & Style (The University of Queesland), How
+        to Write an Essay (Berkeley), Academic and Business Writing(Berkeley),
+        The Art of Teaching (GEMS education), Powerful Tools for Teaching and
+        Learning (University of Houston).
       </p>
       <a
         class="about__link"
