--- a/src/partials/guarantee.html
+++ b/src/partials/guarantee.html
@@ -1,4 +1,4 @@
-<section class="secion">
+<section id="guarantee" class="secion">
   <div class="container">
     <div class="guarantee">
       <h2 class="guarantee__title">We guarantee</h2>
@@ -7,12 +7,15 @@
           <li class="guarantee__item">
             You will pass the UPE with at least 25 points better than on the
             first practice test. Otherwise, we will refund your money.<span
+              class="guarantee__item--accent"
               >*</span
             >
           </li>
           <li class="guarantee__item">
             You will learn to write essays with at least 10 points out of 14.
-            <span>While 20% of the students received 0 for essays.</span>
+            <span class="guarantee__item--accent"
+              >While 20% of the students received 0 for essays.</span
+            >
           </li>
           <li class="guarantee__item">
             You will study in your area. We will choose the location for the
