--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,29 +1,72 @@
-<header>
+<header class="section--header">
   <div class="container">
-    <div class="section">
-      <div class="header">
-        <a class="header__logo" href="./index.html">
-          <img
-            class="logo__img"
-            alt="logo-return to main page"
-            src="./images/logo_mobile.jpg"
-            srcset="./images/logo_2x_mobile.jpg"
-          />
-        </a>
-        <nav class="header__navigation">
-          <ul>
-            <li>Studying program</li>
-            <li>About</li>
-            <li>Training options</li>
-            <li>Contacts</li>
-            <li>Consultation by phone</li>
-          </ul>
-        </nav>
-        <a class="header__smallmenu" href="#">
-          <svg class="smallmenu">
+    <div class="header">
+      <a class="logo__link" href="./index.html">
+        <img
+          class="logo__img"
+          alt="logo-return to main page"
+          src="./images/logo_mobile.jpg"
+          srcset="./images/logo_2x_mobile.jpg"
+        />
+      </a>
+      <nav class="header__navigation--desktop">
+        <ul>
+          <li>Studying program</li>
+          <li>About</li>
+          <li>Training options</li>
+          <li>Contacts</li>
+          <li>Consultation by phone</li>
+        </ul>
+      </nav>
+      <div class="header__smallmenu">
+        <a class="smallmenu__link" href="#">
+          <svg class="smallmenu__icon">
             <use href="./images/icons/icons.svg#icon-burger"></use>
           </svg>
         </a>
+      </div>
+    </div>
+
+    <div class="mobile is-open">
+      <div class="overlay">
+        <div class="navigation">
+          <div class="mobile__top">
+            <a class="logo__link" href="./index.html">
+              <img
+                class="logo__img--mobile"
+                alt="logo-return to main page"
+                src="./images/logo_black_mobile.png"
+                srcset="./images/logo_black_mobile_2x.png"
+              />
+            </a>
+            <svg class="close__icon js-close">
+              <use href="./images/icons/icons.svg#icon-close"></use>
+            </svg>
+          </div>
+          <nav class="header__navigation">
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a class="navigation__link" href="#program">Studying program</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="#about">About</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="#guarantee"
+                  >Training options</a
+                >
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link" href="#contacts">Contacts</a>
+              </li>
+              <li class="navigation__item">
+                <a class="navigation__link--button" href="#phone"
+                  >Consultation by phone</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </div>
   </div>
