--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -2,7 +2,7 @@
   margin-bottom: 1em;
   font-size: 1.25em;
   font-weight: getFontWeight('font-extrabold');
-  letter-spacing: 0.07em;
+  letter-spacing: 0.04em;
   &--underlined {
     @extend .about__title;
     border-bottom: 1px solid getColor('primary-gray');
@@ -23,29 +23,30 @@
 }
 .about__item {
   position: relative;
-  padding-left: 1.35em;
+  padding-left: 2em;
   font-size: 0.875em;
   font-weight: getFontWeight('font-semibold');
-  letter-spacing: 0.03em;
+  letter-spacing: 0.05em;
+  line-height: 1.3;
   overflow-wrap: break-word;
   padding-bottom: 0.875em;
   &::before {
     content: '';
     margin-right: 0.5em;
     position: absolute;
-    top: 0.5em;
+    top: 0.1em;
     left: 0;
     background-image: url(../images/icons/check_icon.svg);
     background-repeat: no-repeat;
     background-size: contain;
     display: inline-block;
     color: getColor('brand-color');
-    width: 1em;
-    height: 0.875em;
+    width: 1.5em;
+    height: 1.5em;
   }
 }
 .about__article__text {
-  margin-bottom: 0.625em;
+  margin-bottom: 0.4em;
   font-size: 0.75em;
   font-weight: getFontWeight('font-medium');
   line-height: 1.7;
