--- a/src/sass/_program.scss
+++ b/src/sass/_program.scss
@@ -1,9 +1,6 @@
 .section--program {
   padding-bottom: 0em;
 }
-.program__cover {
-  background-color: getColor('black');
-}
 .program__background {
   padding-top: 3.125em;
   background-color: getColor('black');
@@ -13,13 +10,24 @@
   flex-direction: column;
   align-items: center;
 }
+.program__item {
+  position: relative;
+}
 .program__item:not(:last-child) {
-  border-left: 0.1em solid getColor('primary-gray');
   padding-bottom: 2.35em;
+  &::before {
+    content: '';
+    position: absolute;
+    width: 0.1em;
+    height: 98%;
+    background-color: getColor('primary-gray');
+    top: 1.1em;
+    left: -0.075em;
+  }
 }
 .program__title {
   color: getColor('background-white');
-  padding-bottom: 2.75em;
+  padding-bottom: 1.8em;
 }
 .program__item__semester {
   margin-left: -0.4em;
@@ -27,12 +35,11 @@
   font-weight: getFontWeight('font-bold');
   letter-spacing: 0.05em;
   color: getColor('background-white');
-  border-left: none;
   &::before {
     content: '';
-    box-sizing: content-box;
     background-image: url(../images/icons/Ellipse3.svg);
     display: inline-block;
+    z-index: 5;
     margin-right: 1.625em;
     width: 12px;
     height: 12px;
@@ -43,7 +50,7 @@
   margin-top: 0.6em;
   margin-bottom: 0.6em;
   font-size: 0.75em;
-  letter-spacing: 0.08em;
+  letter-spacing: 0.06em;
   color: getColor('brand-color');
   &::before {
     content: '\2014';
@@ -57,6 +64,7 @@
   font-size: 0.75em;
   word-wrap: break-word;
   font-weight: getFontWeight('font-medium');
+  letter-spacing: 0.06em;
   color: getColor('primary-gray');
 }
 .program__item__details--image {
@@ -64,15 +72,14 @@
   position: relative;
   &::after {
     content: '';
-    background-image: url(../images/program_picture_mobile.png);
+    background-image: url(../images/program_picture_clipped_mobile.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-clip: border-box;
     display: inline-block;
     position: absolute;
     top: 0em;
-    right: -15em;
-    margin: 0;
+    right: -7.5em;
     width: 176px;
     height: 137px;
   }
