--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -4,11 +4,13 @@
   align-items: center;
 }
 .reviews__title {
-  padding-top: 2.05em;
-  padding-bottom: 1.25em;
+  padding-top: 2.5em;
+  padding-bottom: 1.05em;
   font-size: 1.25em;
   font-weight: getFontWeight('font-extrabold');
   letter-spacing: 0.03em;
+  line-height: 1.3;
+  text-align: center;
 }
 .reviews__thumb {
   display: flex;
