--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,7 @@
         </ul>
       </nav>
       <div class="header__smallmenu">
-        <a class="smallmenu__link" href="#">
+        <a class="smallmenu__link open-menu" href="#">
           <svg class="smallmenu__icon">
             <use href="./images/icons/icons.svg#icon-burger"></use>
           </svg>
@@ -39,7 +39,7 @@
                 srcset="./images/logo_black_mobile_2x.png"
               />
             </a>
-            <svg class="close__icon js-close">
+            <svg class="close__icon is-close">
               <use href="./images/icons/icons.svg#icon-close"></use>
             </svg>
           </div>
@@ -61,7 +61,7 @@
               </li>
               <li class="navigation__item">
                 <a class="navigation__link--button" href="#phone"
-                  >Consultation by phone</a
+                  >Consultation by chat</a
                 >
               </li>
             </ul>
