--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -41,6 +41,7 @@
   color: getColor('background-white');
   font-size: 0.75em;
   font-weight: getFontWeight('font-bold');
+  text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.08em;
   text-decoration: none;
