--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -2,32 +2,142 @@
   <div class="container">
     <div class="reviews">
       <h2 class="reviews__title">Feedback from graduates</h2>
-      <div class="reviews__thumb">
-        <img
-          class="reviews__image"
-          src="./images/logo.png"
-          alt="picture of reviewer"
-          width="100px"
-          height="auto"
-        />
+      <ul class="reviews__slide__track">
+        <li class="reviews__slide__item">
+          <img
+            class="reviews__image"
+            src="./images/reviewers/reviewer1.png"
+            srcset="./images/reviewers/reviewer1_2x.png"
+            alt="picture of reviewer"
+          />
+          <svg class="vk">
+            <use href="./images/icons/icons.svg#icon-vk"></use>
+          </svg>
+          <p class="reviews__name">Tonya Kucherovskaya</p>
+          <p class="reviews__description">
+            Graduated from 2015, National University of Bioresources and natural
+            history of Ukraine
+          </p>
+          <article class="reviews__review">
+            In a short time with Elena, I mastered grammmar and replenished my
+            completely empty vocabulary. From the first lesson I realized that I
+            was on my plate. Elena and I became friends because she was really
+            worried about my success. She became an authority for me, but I did
+            not tremble in class, fearing to make the slightest mistake. Now I
+            can brag that I'm student...
+            <a class="review__more" href="https://vk.com/">Read more</a>
+          </article>
+        </li>
+        <li class="reviews__slide__item">
+          <img
+            class="reviews__image"
+            src="./images/reviewers/reviewer2.png"
+            srcset="./images/reviewers/reviewer2_2x.png"
+            alt="picture of reviewer"
+          />
+          <svg class="vk">
+            <use href="./images/icons/icons.svg#icon-vk"></use>
+          </svg>
+          <p class="reviews__name">Natasza Solonckiya</p>
+          <p class="reviews__description">
+            Graduated from 2015, National University of Bioresources and natural
+            history of Ukraine
+          </p>
+          <article class="reviews__review">
+            The Hellen language school I've been attending for several months
+            has been a tremendous help in improving my language fluency.
+            Initially, I struggled with comprehension and speaking in English,
+            but now I feel much more confident. Conversations with teacher and
+            fellow students have truly assisted me in practicing speaking.
+            However, I am still working on improving my accent...
+            <a class="review__more" href="https://vk.com/">Read more</a>
+          </article>
+        </li>
+        <li class="reviews__slide__item">
+          <img
+            class="reviews__image"
+            src="./images/reviewers/reviewer3.png"
+            srcset="./images/reviewers/reviewer3_2x.png"
+            alt="picture of reviewer"
+          />
+          <svg class="vk">
+            <use href="./images/icons/icons.svg#icon-vk"></use>
+          </svg>
+          <p class="reviews__name">Olga Momotiuk</p>
+          <p class="reviews__description">
+            Graduated from 2015, National University of Bioresources and natural
+            history of Ukraine
+          </p>
+          <article class="reviews__review">
+            My experience with Elena has resulted in a significant expansion of
+            my vocabulary. She regularly introduce new words and idioms that are
+            later practiced in various contexts. As a result, my English
+            vocabulary has greatly broadened. For example, recently, we learned
+            the expression "barking up the wrong tree," which means looking for
+            something in the wrong place. However...
+            <a class="review__more" href="https://vk.com/">Read more</a>
+          </article>
+        </li>
+        <li class="reviews__slide__item">
+          <img
+            class="reviews__image"
+            src="./images/reviewers/reviewer4.png"
+            srcset="./images/reviewers/reviewer4_2x.png"
+            alt="picture of reviewer"
+          />
+          <svg class="vk">
+            <use href="./images/icons/icons.svg#icon-vk"></use>
+          </svg>
+          <p class="reviews__name">Svietlana Romanova</p>
+          <p class="reviews__description">
+            Graduated from 2015, National University of Bioresources and natural
+            history of Ukraine
+          </p>
+          <article class="reviews__review">
+            This is a place where I truly grasped the most challenging grammar
+            rules. Elena always take the time to explain complex concepts, which
+            has been immensely helpful. An example of a difficult rule I
+            understood is the use of the third conditional sentence. The school
+            also offers plenty of practical exercises that allow me to solidify
+            these challenging rules. This place genuinely prioritizes...
+            <a class="review__more" href="https://vk.com/">Read more</a>
+          </article>
+        </li>
+      </ul>
+      <div class="reviews__slide__nav">
+        <div class="reviews__slide__nav__dots">
+          <svg class="icon icon--3elipse">
+            <use href="./images/icons/icons.svg#icon-dot"></use>
+          </svg>
+        </div>
+        <p class="reviews__slide__nav__person">
+          Tonya Kucherovskaya, &nbspKyiv
+        </p>
+        <ul class="reviews__slide__nav__indicator">
+          <li
+            class="reviews__slide__nav__indicator__item reviews__slide__nav__indicator__item--active"
+          >
+            <svg class="icon icon--home">
+              <use href="./images/icons/icons.svg#icon-home"></use>
+            </svg>
+          </li>
+          <li class="reviews__slide__nav__indicator__item">
+            <svg class="icon icon--elipse">
+              <use href="./images/icons/icons.svg#icon-ellipse"></use>
+            </svg>
+          </li>
+          <li class="reviews__slide__nav__indicator__item">
+            <svg class="icon icon--elipse">
+              <use href="./images/icons/icons.svg#icon-ellipse"></use>
+            </svg>
+          </li>
+          <li class="reviews__slide__nav__indicator__item">
+            <svg class="icon icon--elipse">
+              <use href="./images/icons/icons.svg#icon-ellipse"></use>
+            </svg>
+          </li>
+        </ul>
       </div>
-      <svg class="vk">
-        <use href="./images/icons/icons.svg#icon-vk"></use>
-      </svg>
-      <p class="reviews__name">Tonya Kucherovskaya</p>
-      <p class="reviews__description">
-        Graduated from 2015, National University of Bioresources and natural
-        history of Ukraine
-      </p>
-      <article class="reviews__review">
-        In a short time with Elena, I mastered grammmar and replenished my
-        completely empty vocabulary. From the first lesson I realized that I was
-        on my plate. Elena and I became friends because she was really worried
-        about my success. She became an authority for me, but I did not tremble
-        in class, fearing to make the slightest mistake. Now I can brag that I'm
-        student... <a class="review__more" href="#">Read more</a>
-      </article>
-      <div>carousel</div>
     </div>
   </div>
 </section>
